--- a/package.json
+++ b/package.json
@@ -15,13 +15,20 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install",
+    "release": "release-it",
+    "lint": "prettier --config prettier.config.js \"**/*.{js,ts,jsx,tsx,json}\" --write --ignore-unknown",
+    "postinstall": "is-ci || (npm run prepare && npm run lint, "./commitlintRules.config.js""
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
+  },
+"lint-staged": {
+		"**/*.{js,ts,jsx,tsx,json}": "prettier --write --ignore-unknown"
   },
   "browserslist": {
     "production": [
@@ -34,5 +41,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@commitlint/config-conventional": "^17.4.2",
+    "husky": "^8.0.3",
+    "is-ci": "^3.0.1",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.3"
   }
 }
