--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
 	"version": "0.2.0",
 	"private": true,
 	"dependencies": {
+		"@heroicons/react": "^2.0.14",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"firebase": "^9.16.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.8.0",
 		"react-scripts": "5.0.1",
 		"web-vitals": "^2.1.4"
 	},
@@ -47,6 +50,7 @@
 		"husky": "^8.0.3",
 		"is-ci": "^3.0.1",
 		"lint-staged": "^13.1.0",
-		"prettier": "^2.8.3"
+		"prettier": "^2.8.3",
+		"tailwindcss": "^3.2.4"
 	}
 }
