--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"antd": "^5.2.2",
 		"axios": "^1.3.2",
+		"feather-icons": "^4.29.0",
 		"firebase": "^9.16.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
