--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"@testing-library/user-event": "^13.5.0",
 		"antd": "^5.2.2",
 		"axios": "^1.3.2",
+		"bootstrap": "^5.2.3",
+		"fa-icons": "^0.2.0",
 		"feather-icons": "^4.29.0",
 		"firebase": "^9.16.0",
 		"react": "^18.2.0",
